<resources>
    <string name="app_name">Hadipaa</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">LOG IN</string>
    <string name="forgot_password">Forgot your login detail? Get help sign in</string>
    <string name="connect_facebook">Connect with Facebook</string>
    <string name="message_user_auth">Please wait.. Authenticating user..</string>
    <string name="dont_have_acc">Don\'t have an account ?</string>
    <string name="signup">SIGN UP</string>
    <string name="about_you">ABOUT YOU</string>
    <string name="search">Search</string>
    <string name="facebook_app_id">1730705413848545</string>
    <string name="instagram_client_key">a9e04362593d46aa8ec4d1656f5154f1</string>
    <string name="instagram_client_secret">ccf3f75f1ba44da3ba68b05993f674f9</string>
    <string name="instagram_redirect_url">http://hadipaa.dev.tnxlabs.com/instagram</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email_address">Email Address</string>
    <string name="next">NEXT</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="whats_your_number">What\'s Your Number?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="phone_error">Phone number must be 10 digits.</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="whats_your_bdate">What\'s Your Birth Date ?</string>
    <string name="tell_us_more">TELL US MORE</string>
    <string name="pick_one">Pick One</string>
    <string name="done">DONE</string>
    <string name="post">POST</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="preference">Preference</string>
    <string name="feedback_suggestion">Feedback &amp; Suggestions</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_a_girl">I am a girl</string>
    <string name="i_am_a_boy">I am a boy</string>
    <string name="my_plan">MY PLAN</string>
    <string name="followling_caps">FOLLOWLING</string>
    <string name="today">TODAY</string>
    <string name="near_by">NEAR BY</string>
    <string name="close">CLOSE</string>
    <string name="following_0">FOLLOWING</string>
    <string name="followers">FOLLOW</string>
    <string name="connections">CONNECTIONS</string>
    <string name="choose_activity">CHOOSE ACTIVITY</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_activity_small">Choose Activity</string>
    <string name="show_age">Show Ages</string>
    <string name="show_me">Show Me</string>
    <string name="search_distance">Search Distance</string>
    <string name="movie">Movie</string>
    <string name="theatre_play">Theatre Play</string>
    <string name="theatre_party">Theatre Party</string>
    <string name="event">Event</string>
    <string name="festival">Festival</string>
    <string name="night_club">Nightclub</string>
    <string name="lounge">Lounge</string>
    <string name="party">Party</string>
    <string name="standup_comedy">Standup Comedy</string>
    <string name="coffee">Coffee</string>
    <string name="airplane">Airplane</string>
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="adventure">Adventure</string>
    <string name="indoor_sports">Indoor Sports</string>
    <string name="indoor_game">Indoor Game</string>
    <string name="outdoor_sports">Outdoor Sports</string>
    <string name="outdoor_game">Outdoor Game</string>
    <string name="hobby_class">Hobby Class</string>
    <string name="other_activity">Other Activity</string>
    <string name="search_movies">Search for Movies</string>
    <string name="search_club">Search Club or Area</string>
    <string name="search_theatre">Search Theatre</string>
    <string name="search_coffee">Search Coffee Bar</string>
    <string name="coffee_cafe">Coffee Cafe</string>
    <string name="search_longue">Search Longue</string>
    <string name="C1">PVR Cinema : Juhu</string>
    <string name="C2">PVR Cinema : Varsova</string>
    <string name="C3">Fun Cinema : Juhu</string>
    <string name="C5">Cinemax : Juhu</string>
    <string name="star">2.5</string>
    <string name="select_activity">Select Activity</string>
    <string name="select_lounge">Select Lounge or Area</string>
    <string name="select_club">Select Club or Area</string>
    <string name="select_cafe">Select Cafe or Area</string>
    <string name="title_activity_category_tab">CategoryTab</string>
    <string name="cimena">Cinema</string>
    <string name="my_plan_">MY PLAN</string>
    <string name="title_activity_main1">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="my_plan_small">My Plan</string>
    <string name="proxima_bold">proxima_bold.OTF</string>
    <string name="proxima_reg">proxima_regular.OTF</string>
    <string name="upcoming_plan">Upcoming Plan</string>
    <string name="desbribe_this_user">Describe this user in one word</string>
    <string name="send">SEND</string>
    <string name="expired">Expired</string>
    <string name="hobby">Hobby</string>
    <string name="name_of_hobby_class">Name of hobby class</string>
    <string name="travelling_date_and_time">Travelling date and time</string>
    <string name="name_of_hobby">Name of the Hobby</string>
    <string name="place">Place</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="create_activity">Create activity</string>
    <string name="invite">Invite</string>
    <string name="address">Address</string>
    <string name="name_of_the_activity">Name of the activity</string>
    <string name="visiting_date">Visiting Date</string>
    <string name="visiting_time">Visiting Time</string>
    <string name="hide_post_from">Hide Post from</string>
    <string name="public_following"><![CDATA[Public & Following]]></string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="public_activity">Public</string>
    <string name="want_to_receive_notification_for_same_activity">Want to receive notification\nfor same activity</string>
    <string name="invite_to_join_you">Invite to join you</string>
    <string name="join_these_people">Join these people</string>
    <string name="list_with_hadipaa">List with Hadipaa</string>
    <string name="live_music">Live Music</string>
    <string name="adventure_sports">Adventure Sports</string>
    <string name="hobby_classes">Hobby Classes</string>
    <string name="my_booking">My Booking</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="setting">Setting</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="mobile_number_small">Mobile Number</string>
    <string name="company_name">Company Name</string>
    <string name="company_website_or_page_link">Company Website or Page link</string>
    <string name="visiting_date_and_time">Visiting date and time</string>
    <string name="fare_per_seat">Fare Per Seat</string>
    <string name="seats_available">Seats Available</string>
    <string name="select_date">Select Date</string>
    <string name="cut_off_time_to_join_you">Cut off time to join you</string>
    <string name="nightlife">Nightlife</string>
    <string name="search_cafe_or_area">Search Cafe or Area</string>
    <string name="write_your_route">Write your Route</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="available_till">Available till</string>
    <string name="select_time">Select Time</string>
    <string name="write_plane_route">Write Airplane Name</string>
    <string name="write_bus_route">Write Bus Name</string>
    <string name="write_train_route">Write Train Name</string>
    <string name="select_fight">Select Flight</string>
    <string name="where">Where</string>
    <string name="on_button_new_text">\"ON\" Button to get Notify for the same Activity Done by Others</string>
    <string name="on_button_to_get_notify">\"ON\" button to get notify\nfor the same Activity</string>
    <string name="on_button_to_get_notify_long">\"ON\" button to get notify for the same Activity, which will be posted by others too</string>
    <string name="party_name">Party Name</string>
    <string name="standup_comedy_name">Standup Comedy Name</string>
    <string name="game_name">Game Name</string>
    <string name="movies">Movies</string>
    <string name="search_for_movie">Search for Movie</string>
    <string name="you_have_selected">You have selected</string>
    <string name="synopsis">Synopsis</string>
    <string name="sultan_is_a_story_of_sultan_ali_khan_a_local_champion">Sultan is a story of sultan ali khan a local champion</string>
    <string name="view_more">VIEW MORE</string>
    <string name="select_theater">Select Theater</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="chat">Chat</string>
    <string name="msg_loading_messages">Please wait, We are loading messages</string>
    <string name="permission_rationale">Permissions are needed to continue.</string>
    <string name="permission_denied">Permissions were denied. Please consider granting it in order to continue!</string>
    <string name="permission_neverask">Permissions were denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="lbl_OK">OK</string>
    <string name="travel">Travel</string>
    <string name="entertainment">Entertainment</string>
    <string name="theater_play">Theater Play</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_weekend">Weekend</string>
    <string name="lbl_custom">Custom</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="gps_not_found_message">Want to enable?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_name">Event Name</string>
    <string name="select_bus">Select bus</string>
    <string name="delete_photo">Delete photo</string>
    <string name="set_as_main_photo">Set as Main Photo</string>
</resources>