<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.hadippa.CustomTextView
        android:id="@+id/tvSetMainPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_16"
        android:clickable="true"
        android:text="@string/set_as_main_photo"
        android:textColor="@color/bel_grey_text"
        android:textSize="@dimen/values_txt_16"
        app:customFont="@string/proxima_bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"/>

    <com.hadippa.CustomTextView
        android:id="@+id/tvDeletePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_16"
        android:text="@string/delete_photo"
        android:clickable="true"
        android:textColor="@color/bel_grey_text"
        android:textSize="@dimen/values_txt_16"
        app:customFont="@string/proxima_bold"/>

</LinearLayout>