<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context="com.hadippa.activities.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/logo_margin_bottom"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:src="@drawable/login_logo" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relIdPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtUsername"
                style="@style/App_EditTextStyle_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_margin_bottom_2"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/edtPass"
                style="@style/App_EditTextStyle_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtUsername"
                android:layout_marginBottom="@dimen/edittext_margin_bottom_2"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:textStyle="bold"
                android:id="@+id/login"
                style="@style/App_ButtonStyle_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtPass"

                android:text="@string/button_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"

                android:text="@string/forgot_password"
                android:textColor="#ffffff"
                android:textSize="@dimen/forgot_pass_textsize" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relIdPass"
            android:paddingBottom="@dimen/textview_or_margin_bottom"
            android:layout_marginTop="@dimen/textview_or_margin_top"
            android:gravity="center"
            android:text="OR"
            android:textSize="@dimen/or_text_size"
            android:textColor="#ffffff" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc"
            android:textColor="#ffffff"
            android:layout_marginBottom="@dimen/login_button_dont_have_margin_bottom"
            android:textSize="@dimen/forgot_pass_textsize" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_margin_bottom"
            android:background="@drawable/rounded_signup"
            android:gravity="center"
            android:textSize="@dimen/edit_text_size"
            android:paddingTop="@dimen/sign_up_padding"
            android:paddingBottom="@dimen/sign_up_padding"
            android:paddingRight="@dimen/sign_up_padding_horizontal"
            android:paddingLeft="@dimen/sign_up_padding_horizontal"
            android:text="@string/signup"
            android:textColor="#ffffff" />

    </LinearLayout>





</LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
       >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#34ffffff"></View>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="connect_with_facebook"
            android:visibility="gone" />
        <LinearLayout
            android:id="@+id/linearFacebook"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/connect_with_facebook_padding_top"
            android:paddingBottom="@dimen/connect_with_facebook_padding_bottom"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_facebookicon"
            android:textColor="#ffffff" />

        <TextView
            android:textSize="@dimen/or_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/connect_facebook"
            android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>